tests/machine/x/go/load_yaml.error
Error on line 0: run error: exit status 1
panic: interface conversion: interface {} is map[string]interface {}, not main.Person

goroutine 1 [running]:
main._cast[...](...)
	/workspace/mochi/tests/machine/x/go/load_yaml.go:44
main.main.func1(...)
	/workspace/mochi/tests/machine/x/go/load_yaml.go:23
main.main()
	/workspace/mochi/tests/machine/x/go/load_yaml.go:26 +0x745
exit status 2

1: //go:build ignore
